--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.7",
     "read-excel-file": "^5.2.25",
     "serialport": "^9.0.6",
+    "swagger-ui-express": "^4.3.0",
     "uniqid": "^5.3.0",
     "xlsx": "^0.17.4"
   },
