--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@ DB_HOST=192.168.0.180
 
 API_URI = http://151.106.112.34/:5000
 
+URL_SERVICE_ITAM = http://192.168.0.110:3000
 BASEDIR = /01-PORLI-rfid-backend/helper
