--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "is-json": "^2.0.1",
     "json2xls": "^0.1.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "node-cron": "^2.0.3",
