--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-DB_NAME=logikarfid
-DB_USERNAME=root
-DB_PASSWORD=logika911
-DB_HOST=192.168.0.180
+DB_NAME=polri_rfid
+DB_USERNAME=zain
+DB_PASSWORD=zain123
+DB_HOST=151.106.112.34
+DB_PORT = 3306
 
 API_URI = http://151.106.112.34/:5000
 
