add PORT UDP-Server

--- a/.env
+++ b/.env
@@ -4,6 +4,11 @@ DB_PASSWORD=zain123
 DB_HOST=151.106.112.34
 DB_PORT = 3306
 
+PORT= 8080
+
+UDP_SERVER = 151.106.112.34
+UDP_PORT = 8000
+
 API_URI = http://151.106.112.34/:5000
 
 URL_SERVICE_ITAM = http://192.168.0.110:3000
