--- a/.env
+++ b/.env
@@ -9,7 +9,6 @@ PORT= 8080
 UDP_SERVER = 151.106.112.34
 UDP_PORT = 8000
 
-API_URI = http://151.106.112.34/:5000
 
-URL_SERVICE_ITAM = http://192.168.0.110:3000
+URL_SERVICE_ITAM = https://api.itam.dev.digiprimatera.co.id
 BASEDIR = /01-PORLI-rfid-backend/helper
