modify post data to ITAM

--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ UDP_PORT = 8000
 
 URL_SERVICE_ITAM = https://api.itam.dev.digiprimatera.co.id
 BASEDIR = /01-PORLI-rfid-backend/helper
+
+TIMEOUT=5000
