--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "controller.js",
   "dependencies": {
+    "i18next": "^15.1.1",
+    "i18next-express-middleware": "^2.0.0",
+    "i18next-node-fs-backend": "^2.1.3",
     "axios": "^0.25.0",
     "content-range": "^1.1.1",
     "cors": "^2.8.5",
