--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.29.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.7",
     "node-xlsx": "^0.16.1",
