--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "node-xlsx": "^0.16.1",
     "nodemon": "^2.0.7",
     "read-excel-file": "^5.2.25",
+    "sequelize": "^6.17.0",
+    "sequelize-cli": "^6.4.1",
     "serialport": "^9.0.6",
     "swagger-ui-express": "^4.3.0",
     "uniqid": "^5.3.0",
