--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "type": "git",
     "url": "git+https://github.com/zainurihasan/RFID-Solution.git"
   },
-  "author": "Logika Pratam",
+  "author": "Logika Pratama",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/zainurihasan/RFID-Solution/issues"
